text overflow bug

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -77,6 +77,9 @@
 .chat__friend-name {
   flex: 1;
   margin-left: 2rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .chat__search-trigger {
